--- a/angulartodo/js/template/templatetable.html
+++ b/angulartodo/js/template/templatetable.html
@@ -16,11 +16,12 @@
 		<tr ng-repeat="todo in model.todos  | filter:searchText| filter: model.todos.foolday |orderBy:sortType:!sortReverse"  ng-class= "todo.foolday"  track by $index">
 
 
-			<td>{{todo.nameUser }}</td>	
-			<td>{{todo.name}}
-			<div class="comment" ng-show="todo.foolday==='partdone'"><div class="well well-xs">{{todo.comment}}</div> </div>
+			<td ng-bind='todo.nameUser'></td>	
+			<td >
+			<p ng-bind='todo.name'></p>
+			<div class="comment" ng-show="todo.foolday==='partdone'"><div class="well well-xs"><p ng-bind="todo.comment"></p></div> </div>
 			</td>
-			<td>{{todo.date }}</td>			
+			<td ng-bind='todo.date'></td>			
 			<td>
 				<button class="btn btn-success" ng-click="edit(todo)" ><i class="glyphicon glyphicon-pencil"></i></button> 
 				<button class="btn btn-danger" ng-click="remove(todo)"><i class="glyphicon glyphicon-trash"></i></button>
